--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,24 @@
     {
       "src": "app.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
+  "env": {
+    "SWAGGER_HOST": "https://lyrics-api-orpin.vercel.app"
+  },
+
   "routes": [
     {
       "src": "/",
-      "methods": ["GET"],
       "dest": "app.js"
+    },
+    {
+      "src": "/docs",
+      "dest": "/public/index.html"
     },
     {
       "src": "/songs",
@@ -40,10 +51,6 @@
     {
       "src": "/users/update/:id",
       "methods": ["PUT"],
-      "dest": "app.js"
-    },
-    {
-      "src": "/docs",
       "dest": "app.js"
     }
   ]
