--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
     {
       "src": "app.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
     }
   ],
   "env": {
@@ -22,6 +18,10 @@
     {
       "src": "/docs",
       "dest": "/public/index.html"
+    },
+    {
+      "src": "/swagger.json",
+      "dest": "/public/swagger.json"
     },
     {
       "src": "/songs",
